# Worksite

./: .dockerignore  .env.example  .gitignore  Dockerfile.hud  README.md  index.html  pyproject.toml  run_vla.py  site.css  site.js
agents/: vla_agent.py
contracts/: franka_libero.json
docs/: SITEFORGE_PLAN.md  scope-guide.html
environment/: construction_env.py  coop_env.py  env.py  living_room_env.py  tasks.py  team_env.py  vla_env.py
examples/: construction_agents.py  coop_agents.py  example_agent.py  living_room_agent.py  team_agent.py
scenes/construction-v1/: metadata.json
scenes/construction-v1/boston_dynamics_spot/: spot.xml
scenes/franka-libero-v1/: metadata.json  scene.xml
scenes/franka-libero-v1/franka_emika_panda/: panda.xml
scenes/living-room-v1/: metadata.json
scenes/tabletop-v1/: metadata.json  scene.xml
scripts/: check_setup.py  construction_rl_train.py  loco_manip_g1.py  record_construction.py  record_plan.py  record_scene.py  record_task.py  walk_g1_circle.py
serve/: exa_search.py  pi05_modal.py  policy_server.py
sim/: agent_spacing.py  construction_world.py  control.py  coop_world.py  franka_bridge.py  host.py  multi_skill_world.py  newton_compat.py  scene_render.py  server.py  skill_world.py
